--- a/Equivalent_Width_Spectroscopy_Lab_Student.ipynb
+++ b/Equivalent_Width_Spectroscopy_Lab_Student.ipynb
@@ -6,7 +6,7 @@
       "name": "Equivalent Width Spectroscopy Lab.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNlO56SqVT3Fk6TpdJyHmni",
+      "authorship_tag": "ABX9TyPou6oTHLWcjrJDuT5ftF6u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -636,11 +636,11 @@
         "id": "J9BRVh9JOz7r"
       },
       "source": [
-        "We can measure how much of a particular element is in a star using spectroscopy. We plot the spectrum and find a particular absorption feature associated with a particular element. Then we can use a clever approximation o get a sense of the amount of the element present. The approximation is called the equivalent width. The equivalent width calculation is fairly simple geometry that comes from some [very complicated stellar physics and chemistry](http://research.iac.es/congreso/itn-gaia2013/media/Primas2.pdf).\n",
+        "We can measure how much of a particular element is in a star using spectroscopy. We plot the spectrum and find a particular absorption feature associated with a particular element. Then we can use a clever approximation to get a sense of the amount of the element present. The approximation is called the equivalent width. The equivalent width calculation is fairly simple geometry that comes from some [very complicated stellar physics and chemistry](http://research.iac.es/congreso/itn-gaia2013/media/Primas2.pdf).\n",
         "\n",
         "$ W_{\\lambda}\\propto\\ Nhf\\lambda^2 $\n",
         "\n",
-        "The equivalent width $ W_{\\lambda} $ varies as the number of atoms of that element, $ N $. The product $ hf $ is Planck's constant times the frequency of the absorption feature. $ \\lambda $ is the wavelength of the of the absorption feature. This strange notation is common for stellar spectroscopy."
+        "The equivalent width $ W_{\\lambda} $ varies as the number of atoms of that element, $ N $. The product $ hf $ is Planck's constant times the frequency of the absorption feature. $ \\lambda $ is the wavelength of the absorption feature. This strange notation is common for stellar spectroscopy."
       ]
     },
     {
