--- a/Keplers_3rd_Law_Activity.ipynb
+++ b/Keplers_3rd_Law_Activity.ipynb
@@ -257,6 +257,11 @@
         "id": "h-L2gXo79KNp"
       },
       "source": [
+        "# plt is our plot object which handles plotting data\n",
+        "# For physics and astronomy, you probably want a scatter plot\n",
+        "\n",
+        "# plt.scatter uses the 1st thing for the horizontal axis\n",
+        "# and the 2nd thing for the vertical axis so (x,y)\n",
         "plt.scatter(r_au, t_days)\n",
         "plt.title(\"title?\")\n",
         "plt.xlabel(\"Label me!\")\n",
@@ -332,8 +337,6 @@
         "id": "vMunIR5XNkQx"
       },
       "source": [
-        "# plt is our plot object which handles plotting data\n",
-        "# For physics and astronomy, you probably want a scatter plot\n",
         "plt.scatter(x,y)\n",
         "plt.title(\"title?\")\n",
         "plt.xlabel(\"Label me!\")\n",
