--- a/NGC_3201_Photometry_and_CMD_Lab.ipynb
+++ b/NGC_3201_Photometry_and_CMD_Lab.ipynb
@@ -104,7 +104,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##***--->All RR Lyrae stars have an absolute magnitude of 0.75.<---***"
+        "##***--->All RR Lyrae stars have an absolute magnitude of 0.75 at their brightest.<---***"
       ],
       "metadata": {
         "id": "2o8MBWlkD-_p"
@@ -390,9 +390,9 @@
       "source": [
         "# You should select the brightest magnitude to use in the distance modulus calculation\n",
         "\n",
-        "# The command data1['App Mag'].max will return the largest value in the list.\n",
-        "# The command data1['App Mag'].mean will return the mean of the values.\n",
-        "# The command data1['App Mag'].max will return the smallest value in the list.\n",
+        "# The command data1['App Mag'].max() will return the largest value in the list.\n",
+        "# The command data1['App Mag'].mean() will return the mean of the values.\n",
+        "# The command data1['App Mag'].max() will return the smallest value in the list.\n",
         "\n",
         "# Why would we want the smallest magnitude if we want the brightest one from the list?\n",
         "#------> Answer here: \n",
