--- a/NGC_3201_Photometry_and_CMD_Lab.ipynb
+++ b/NGC_3201_Photometry_and_CMD_Lab.ipynb
@@ -392,7 +392,7 @@
         "\n",
         "# The command data1['App Mag'].max() will return the largest value in the list.\n",
         "# The command data1['App Mag'].mean() will return the mean of the values.\n",
-        "# The command data1['App Mag'].max() will return the smallest value in the list.\n",
+        "# The command data1['App Mag'].min() will return the smallest value in the list.\n",
         "\n",
         "# Why would we want the smallest magnitude if we want the brightest one from the list?\n",
         "#------> Answer here: \n",
