--- a/Video_vs_Modeling_Analysis.ipynb
+++ b/Video_vs_Modeling_Analysis.ipynb
@@ -6,7 +6,7 @@
       "name": "Video vs Modeling Analysis.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMGVEbgAS8Ihf2MIIAQ/D38",
+      "authorship_tag": "ABX9TyN1sp87RdwQ/cppAfT3H8Db",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -145,8 +145,11 @@
         "from google.colab import auth\n",
         "auth.authenticate_user()\n",
         "import gspread\n",
-        "from oauth2client.client import GoogleCredentials\n",
-        "gc = gspread.authorize(GoogleCredentials.get_application_default())\n",
+        "from google.auth import default\n",
+        "\n",
+        "creds, _ = default()\n",
+        "\n",
+        "gc = gspread.authorize(creds)\n",
         "wb = gc.open_by_url('PUT_YOUR_SPREADSHEET_URL_HERE')"
       ],
       "execution_count": null,
