--- a/Video_vs_Modeling_Analysis.ipynb
+++ b/Video_vs_Modeling_Analysis.ipynb
@@ -3,10 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Video vs Modeling Analysis.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN1sp87RdwQ/cppAfT3H8Db",
+      "authorship_tag": "ABX9TyMkFHKEbhX5i7rSAtUackrX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -144,13 +143,13 @@
         "# Allow for access to Google Sheets dataset\n",
         "from google.colab import auth\n",
         "auth.authenticate_user()\n",
+        "\n",
         "import gspread\n",
         "from google.auth import default\n",
-        "\n",
         "creds, _ = default()\n",
         "\n",
         "gc = gspread.authorize(creds)\n",
-        "wb = gc.open_by_url('PUT_YOUR_SPREADSHEET_URL_HERE')"
+        "wb = gc.open_by_url('PUT_YOUR_URL_HERE')"
       ],
       "execution_count": null,
       "outputs": []
