--- a/Equivalent_Width_Ver_2.ipynb
+++ b/Equivalent_Width_Ver_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOv5LnCmhcEHbw7iQ9oNpfM",
+      "authorship_tag": "ABX9TyOgMaeH2wgJAkCaZ9DzYcnk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -345,7 +345,7 @@
         "*   **`HD165195`**\n",
         "*   **`TYC5562-00446-1`**\n",
         "*   **`TYC5701-00197-1`**\n",
-        "*   **`V*SX_Her`**\n",
+        "*   **`V*_SX_Her`**\n",
         "\n",
         "**Double click the code block to edit it and write the code for the other stars.**\n",
         "\n"
