--- a/Video_vs_Modeling_Analysis.ipynb
+++ b/Video_vs_Modeling_Analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOECsSEAvIp+p0Tx4yxnOPy",
+      "authorship_tag": "ABX9TyMRLa+lzmOJxEA/KUxd7hqo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,7 +78,7 @@
         "id": "84Wx8e402DPd"
       },
       "source": [
-        "You should open this [spreadsheet](https://docs.google.com/spreadsheets/d/1aj-MNMfqGmhXU1CFhDszNXTjiUfsYkYj5hv35yWJ2LA/edit?usp=sharing) and **make a copy** to hold your data. This spreadsheet is read only and you will need your own copy for your own data for the next part.\n",
+        "You should open this [spreadsheet](https://docs.google.com/spreadsheets/d/1aj-MNMfqGmhXU1CFhDszNXTjiUfsYkYj5hv35yWJ2LA/copy#gid=0) and **make a copy** to hold your data. This spreadsheet is read only and you will need your own copy for your own data for the next part.\n",
         "\n",
         "You will include both the data from the video analysis and from the modeling output. There are two tabs in the spreadsheet, one for each dataset.\n",
         "\n",
