--- a/SDSS_BOSS_Plate_Hubbles_Law_Student.ipynb
+++ b/SDSS_BOSS_Plate_Hubbles_Law_Student.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "SDSS BOSS Plate Hubbles Law - Student.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +54,7 @@
         "##Question 0\n",
         "**Double click here to answer. Put your name(s) and class info here.**\n",
         "\n",
-        "Answer: "
+        "Answer:"
       ]
     },
     {
@@ -68,8 +66,8 @@
         "<img src=\"https://www.sdss.org/wp-content/uploads/2014/11/SDSS_telescope_new.jpg\" width=500 />\n",
         "\n",
         "The Sloan Digital Sky Survey (SDSS) has been running at Apache Point Observatory since 2000. This large volume of publicly available data is a perfect place to explore scientific computing and data science while getting a hands on look at Hubble's law.\n",
-        " \n",
-        "This activity looks at data from the Baryon Oscillation Spectroscopy Survey (BOSS). The specific data here all comes from a spectroscopic plate observation of one chunk of the sky. \n",
+        "\n",
+        "This activity looks at data from the Baryon Oscillation Spectroscopy Survey (BOSS). The specific data here all comes from a spectroscopic plate observation of one chunk of the sky.\n",
         "\n",
         "<img src=\"https://www.sdss.org/wp-content/uploads/2019/11/apogeen-plugging.png\" width=500 />\n",
         "\n",
@@ -123,13 +121,12 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "tcdjlM4g8Gsx"
-      },
       "source": [
-        "# Install an additional package we need to talk to the SDSS science database\n",
         "!pip install astroquery"
       ],
+      "metadata": {
+        "id": "kx1nSZDuupgg"
+      },
       "execution_count": null,
       "outputs": []
     },
@@ -220,11 +217,11 @@
         "\n",
         "This is a database query to retrieve *at most* 1000 objects from this plate. Most plates don't have this many objects but it is a way to limit the results just in case.\n",
         "\n",
-        "The SpecPhoto table from the SDSS database combines together the photometric data (brightness and stuff) and the spectroscopic data ([individual spectra](https://www.sdss.org/dr12/spectro/)). \n",
+        "The SpecPhoto table from the SDSS database combines together the photometric data (brightness and stuff) and the spectroscopic data ([individual spectra](https://www.sdss.org/dr12/spectro/)).\n",
         "\n",
         "<img src=\"https://www.sdss.org/wp-content/uploads/2014/11/faceplat2.jpg\" width=200 />\n",
         "\n",
-        "The brightness data we are using is the [model magnitude](https://www.sdss.org/dr12/algorithms/magnitudes/#mag_model) for the galaxy and is just from one filter, the `i` filter from the [`ugriz`](https://www.sdss.org/instruments/camera/#Filters) filter set. \n",
+        "The brightness data we are using is the [model magnitude](https://www.sdss.org/dr12/algorithms/magnitudes/#mag_model) for the galaxy and is just from one filter, the `i` filter from the [`ugriz`](https://www.sdss.org/instruments/camera/#Filters) filter set.\n",
         "\n",
         "<img src=\"https://skyserver.sdss.org/dr12/en/get/SpecById.ashx?id=7931990242818191360\" width=300 />\n",
         "\n",
@@ -319,7 +316,7 @@
       },
       "source": [
         "### Independent vs dependent\n",
-        "First lets just plot the data and see what we get. Typically we plot the dependent variable along the y-axis and the independent variable along the x-axis. "
+        "First lets just plot the data and see what we get. Typically we plot the dependent variable along the y-axis and the independent variable along the x-axis."
       ]
     },
     {
@@ -331,12 +328,12 @@
         "# Perform a scatter plot\n",
         "\n",
         "# What should we put along the x and y axes?\n",
-        "# Choose the data axes like this (except use real column names): \n",
+        "# Choose the data axes like this (except use real column names):\n",
         "# x = data['ColForX'] and y = data['ColForY']\n",
         "x = data['app_mag']\n",
         "y = data['z']\n",
         "\n",
-        "# The plt object plots our data. \n",
+        "# The plt object plots our data.\n",
         "# Here we want a scatter plot.\n",
         "# Whatever list you put 1st is x, and the 2nd is y.\n",
         "plt.scatter(x,y)\n",
@@ -360,7 +357,7 @@
         "##Question 3\n",
         "**Double click here to answer. What do you notice and what do you wonder about our plot? Is there a linear relationship between x and y? Is there more than one group here? Can you identify any outliers?**\n",
         "\n",
-        "Answer:\n"
+        "Answer:"
       ]
     },
     {
@@ -378,11 +375,11 @@
         "id": "o98dK6RoQYhr"
       },
       "source": [
-        "Edwin Hubble showed the earlier ideas about the universe expanding were true. He discovered that the amount of redshift of a galaxy seemed to depend on the distance that galaxy is from us. We are going to explore this exact relationship with our data.\n",
+        "George Lemaitre had predicted the expanding universe before anyone had real data to prove it. Edwin Hubble showed the earlier ideas about the universe expanding were true. He discovered that the amount of redshift of a galaxy seemed to depend on the distance that galaxy is from us. We are going to explore this exact relationship with our data.\n",
         "\n",
-        "<img src=\"https://openstax.org/resources/7f27f064e23d86aa9968b4ef8642cbe37194697e\" width=75% />\n",
+        "<img src=\"https://openstax.org/apps/archive/20231109.173216/resources/7f27f064e23d86aa9968b4ef8642cbe37194697e\" width=75% />\n",
         "\n",
-        "[Check out more about Hubble and Humason](https://openstax.org/books/astronomy/pages/26-5-the-expanding-universe#OSC_Astro_26_05_HLaw)"
+        "[Check out more about Hubble and his colleagues Humason and Lemaitre](https://openstax.org/books/astronomy-2e/pages/26-5-the-expanding-universe)"
       ]
     },
     {
@@ -426,7 +423,7 @@
         "y = data['z']\n",
         "\n",
         "# Run the linear regression on our data and plot it.\n",
-        "sns.regplot(x,y)\n",
+        "sns.regplot(x = x, y = y)\n",
         "\n",
         "# Note that the regplot function chooses the axes names for you\n",
         "\n",
@@ -492,10 +489,10 @@
       },
       "source": [
         "# Set m equal to the apparent magnitude.\n",
-        "m = 0\n",
+        "m = data['app_mag']\n",
         "\n",
         "# Raise 2.5 to the -m power\n",
-        "flux = 0 "
+        "flux = 2.5**-m"
       ],
       "execution_count": null,
       "outputs": []
@@ -518,7 +515,7 @@
         "# Use the inverse square relationship to get relative distance.\n",
         "\n",
         "# np.sqrt finds the square root of number\n",
-        "rel_dist = 0"
+        "rel_dist = 1/np.sqrt(flux)"
       ],
       "execution_count": null,
       "outputs": []
@@ -538,12 +535,12 @@
         "id": "A8tmRysvuTO_"
       },
       "source": [
-        "# Let's 'normalize' our relative distances. \n",
+        "# Let's 'normalize' our relative distances.\n",
         "# Based on our farthest galaxy, what's the relative dist. to the others?\n",
-        "farthest = 0\n",
+        "farthest = rel_dist.max()\n",
         "\n",
         "# Divide our list of relative distances by our farthest distance\n",
-        "rel_dist = 0"
+        "rel_dist = rel_dist/farthest"
       ],
       "execution_count": null,
       "outputs": []
@@ -577,17 +574,17 @@
       "source": [
         "# Following the examples above, display a scatter plot rel_dist vs z\n",
         "\n",
-        "x = 0\n",
-        "y = 0\n",
+        "x = data['rel_dist']\n",
+        "y = data['z']\n",
         "\n",
-        "# Plot here\n",
+        "plt.scatter(x,y)\n",
         "\n",
         "# Change these to something useful\n",
-        "plt.xlabel('Change me')\n",
-        "plt.ylabel('Me too')\n",
+        "plt.xlabel('Relative Distance')\n",
+        "plt.ylabel('Redshift')\n",
         "\n",
         "# Display our plot.\n",
-        "# Show here"
+        "plt.show()"
       ],
       "execution_count": null,
       "outputs": []
@@ -600,10 +597,10 @@
       "source": [
         "# Following the examples above, plot a linear regression\n",
         "# of rel_dist and z\n",
-        "x = 0\n",
-        "y = 0\n",
+        "x = data['rel_dist']\n",
+        "y = data['z']\n",
         "\n",
-        "sns.regplot(x,y)\n",
+        "sns.regplot(x=x,y=y)\n",
         "\n",
         "plt.show()"
       ],
@@ -628,7 +625,7 @@
       },
       "source": [
         "# Make the x variable our distribution of relative distances\n",
-        "x = 0\n",
+        "x = data['rel_dist']\n",
         "\n",
         "# Plot a histogram with equally spaced bins\n",
         "bins = 34     # try different numbers of bins\n",
@@ -648,7 +645,7 @@
         "## Question 6\n",
         "**Double click here to answer. What does the histogram say about the variation in the relative distances? Are most galaxies close or far? What does the skew direction say about our population of galaxies?**\n",
         "\n",
-        "Answer: "
+        "Answer:"
       ]
     },
     {
@@ -682,9 +679,9 @@
         "# 4 standard deviations from the mean of the data.\n",
         "\n",
         "# Plot the linear regression of the new dataframe\n",
-        "x = 0\n",
-        "y = 0\n",
-        "sns.regplot(x,y)\n",
+        "x = newdata['rel_dist']\n",
+        "y = newdata['z']\n",
+        "sns.regplot(data=newdata, x=x, y=y)\n",
         "\n",
         "\n",
         "plt.show()"
@@ -727,7 +724,7 @@
         "## Question 8\n",
         "**Double click here to answer. How does the 2nd histogram support or not support our decision to remove the outliers? Does the distribution now follow the Gaussian bell curve? What does this distribution of galaxies say about our dataset with the outliers removed?**\n",
         "\n",
-        "Answer: "
+        "Answer:"
       ]
     },
     {
@@ -747,13 +744,13 @@
         "id": "3YKnl_klaCAE"
       },
       "source": [
-        "x = 0\n",
-        "y = 0\n",
+        "x = data['ra']\n",
+        "y = data['dec']\n",
         "\n",
         "plt.scatter(x,y)\n",
         "\n",
-        "plt.xlabel('Good choice for name here')\n",
-        "plt.ylabel('Same here')\n",
+        "plt.xlabel('Right Ascension (deg)')\n",
+        "plt.ylabel('Declination (deg)')\n",
         "\n",
         "plt.show()"
       ],
@@ -845,7 +842,7 @@
         "id": "fg3hApu7ZUe2"
       },
       "source": [
-        "sns.relplot(x='ra', y='dec', hue=inv_dist, size=inv_dist, palette='Blues', \n",
+        "sns.relplot(x='ra', y='dec', hue=inv_dist, size=inv_dist, palette='Blues',\n",
         "            data=newdata, height=8, sizes=(45,100))\n",
         "\n",
         "plt.show()"
@@ -862,7 +859,7 @@
         "## Question 9\n",
         "**Double click here to answer. Using the new sky chart, can any pattern for the distribution of close and far galaxies be seen in the sky?**\n",
         "\n",
-        "Answer: "
+        "Answer:"
       ]
     }
   ]
