--- a/SDSS_BOSS_Plate_Hubbles_Law_Student.ipynb
+++ b/SDSS_BOSS_Plate_Hubbles_Law_Student.ipynb
@@ -842,10 +842,10 @@
         "id": "fg3hApu7ZUe2"
       },
       "source": [
-        "sns.relplot(x='ra', y='dec', hue=inv_dist, size=inv_dist, palette='Blues',\n",
+        "sns.relplot(x='ra', y='dec', hue=inv_dist, size=inv_dist, palette='Spectral_r',\n",
         "            data=newdata, height=8, sizes=(45,100))\n",
         "\n",
-        "plt.show()"
+        "plt.show() #The Seaborn palette is reversed so red means more distant."
       ],
       "execution_count": null,
       "outputs": []
