--- a/SDSS_BOSS_Plate_Hubbles_Law_Student.ipynb
+++ b/SDSS_BOSS_Plate_Hubbles_Law_Student.ipynb
@@ -159,7 +159,8 @@
         "id": "FDigHAyZUhTZ"
       },
       "source": [
-        "# Plate browser: https://skyserver.sdss.org/dr12/en/tools/getimg/plate.aspx\n",
+        "# Plate browser:\n",
+        "# https://skyserver.sdss.org/dr12/en/tools/getimg/plate.aspx\n",
         "# Put your particular plate and MJD here\n",
         "plate = 7045\n",
         "mjd = 56577\n",
@@ -235,7 +236,8 @@
       },
       "source": [
         "# Build the query first\n",
-        "query = \"SELECT TOP 1000 objid, ra, dec, modelMag_i AS app_mag , z from SpecPhoto WHERE (class = 'GALAXY' AND plate = '7045')\"\n",
+        "query = \"SELECT TOP 1000 objid, ra, dec, modelMag_i AS app_mag , z \\\n",
+        "          from SpecPhoto WHERE (class = 'GALAXY' AND plate = '7045')\"\n",
         "\n",
         "# Run the query and store the results\n",
         "result = SDSS.query_sql(query, data_release=16)"
@@ -330,8 +332,8 @@
         "# What should we put along the x and y axes?\n",
         "# Choose the data axes like this (except use real column names):\n",
         "# x = data['ColForX'] and y = data['ColForY']\n",
-        "x = data['app_mag']\n",
-        "y = data['z']\n",
+        "x = 'put x data here'\n",
+        "y = 'put y data here'\n",
         "\n",
         "# The plt object plots our data.\n",
         "# Here we want a scatter plot.\n",
@@ -339,8 +341,8 @@
         "plt.scatter(x,y)\n",
         "\n",
         "# Change these to something useful\n",
-        "plt.xlabel('Apparent mag')\n",
-        "plt.ylabel('Redshift')\n",
+        "plt.xlabel('Put something useful here')\n",
+        "plt.ylabel('Put something else useful here')\n",
         "\n",
         "# Display our plot.\n",
         "plt.show()"
@@ -419,8 +421,8 @@
       },
       "source": [
         "# What should we put along the x and y axes?\n",
-        "x = data['app_mag']\n",
-        "y = data['z']\n",
+        "x = 'Try magnitude'\n",
+        "y = 'Try redshift'\n",
         "\n",
         "# Run the linear regression on our data and plot it.\n",
         "sns.regplot(x = x, y = y)\n",
@@ -489,10 +491,10 @@
       },
       "source": [
         "# Set m equal to the apparent magnitude.\n",
-        "m = data['app_mag']\n",
+        "m = 'put the magnitude here'\n",
         "\n",
         "# Raise 2.5 to the -m power\n",
-        "flux = 2.5**-m"
+        "flux = 'make math happen here'"
       ],
       "execution_count": null,
       "outputs": []
@@ -515,7 +517,7 @@
         "# Use the inverse square relationship to get relative distance.\n",
         "\n",
         "# np.sqrt finds the square root of number\n",
-        "rel_dist = 1/np.sqrt(flux)"
+        "rel_dist = 'inverse of square root of flux'"
       ],
       "execution_count": null,
       "outputs": []
@@ -574,14 +576,14 @@
       "source": [
         "# Following the examples above, display a scatter plot rel_dist vs z\n",
         "\n",
-        "x = data['rel_dist']\n",
-        "y = data['z']\n",
+        "x = 'relative distance'\n",
+        "y = 'redshift'\n",
         "\n",
         "plt.scatter(x,y)\n",
         "\n",
         "# Change these to something useful\n",
-        "plt.xlabel('Relative Distance')\n",
-        "plt.ylabel('Redshift')\n",
+        "plt.xlabel('Something useful')\n",
+        "plt.ylabel('Something else useful')\n",
         "\n",
         "# Display our plot.\n",
         "plt.show()"
@@ -597,8 +599,8 @@
       "source": [
         "# Following the examples above, plot a linear regression\n",
         "# of rel_dist and z\n",
-        "x = data['rel_dist']\n",
-        "y = data['z']\n",
+        "x = 'relative distance'\n",
+        "y = 'redshift'\n",
         "\n",
         "sns.regplot(x=x,y=y)\n",
         "\n",
@@ -625,7 +627,7 @@
       },
       "source": [
         "# Make the x variable our distribution of relative distances\n",
-        "x = data['rel_dist']\n",
+        "x = 'make this the relative distance'\n",
         "\n",
         "# Plot a histogram with equally spaced bins\n",
         "bins = 34     # try different numbers of bins\n",
@@ -744,13 +746,13 @@
         "id": "3YKnl_klaCAE"
       },
       "source": [
-        "x = data['ra']\n",
-        "y = data['dec']\n",
+        "x = 'use the RA field from the data'\n",
+        "y = 'use the DEC field from the data'\n",
         "\n",
         "plt.scatter(x,y)\n",
         "\n",
-        "plt.xlabel('Right Ascension (deg)')\n",
-        "plt.ylabel('Declination (deg)')\n",
+        "plt.xlabel('put something here')\n",
+        "plt.ylabel('put something else here')\n",
         "\n",
         "plt.show()"
       ],
