--- a/SDSS_BOSS_Plate_Hubbles_Law_Student.ipynb
+++ b/SDSS_BOSS_Plate_Hubbles_Law_Student.ipynb
@@ -377,7 +377,7 @@
         "id": "o98dK6RoQYhr"
       },
       "source": [
-        "George Lemaitre had predicted the expanding universe before anyone had real data to prove it. Edwin Hubble showed the earlier ideas about the universe expanding were true. He discovered that the amount of redshift of a galaxy seemed to depend on the distance that galaxy is from us. We are going to explore this exact relationship with our data.\n",
+        "George Lemaitre had predicted the expanding universe before anyone had real data to prove it. Edwin Hubble showed the earlier ideas about the universe expanding were true. He discovered that the amount of redshift of a galaxy seemed to depend on the distance that galaxy is from us. We are going to explore this exact relationship with our data. Notice this version of the relationship shows distance versus recession velocity. We will use magnitude versus [calculated redshift, or z](http://hyperphysics.phy-astr.gsu.edu/hbase/Astro/redshf2.html#c1).\n",
         "\n",
         "<img src=\"https://openstax.org/apps/archive/20231109.173216/resources/7f27f064e23d86aa9968b4ef8642cbe37194697e\" width=75% />\n",
         "\n",
