--- a/SDSS_BOSS_Plate_Hubbles_Law_Teacher.ipynb
+++ b/SDSS_BOSS_Plate_Hubbles_Law_Teacher.ipynb
@@ -767,8 +767,9 @@
       "source": [
         "George Lemaitre had predicted the expanding universe before anyone had real data to prove it. Edwin Hubble showed the earlier ideas about the universe expanding were true. He discovered that the amount of redshift of a galaxy seemed to depend on the distance that galaxy is from us. We are going to explore this exact relationship with our data. Notice this version of the relationship shows distance versus recession velocity. We will use magnitude versus [calculated redshift, or z](http://hyperphysics.phy-astr.gsu.edu/hbase/Astro/redshf2.html#c1).\n",
         "\n",
-        "$$1+z=\\frac{\\lambda_{observed}}{\\lambda_{source}}=\\sqrt{\\frac{1+\\beta}{1-\\beta}}$$<br>\n",
-        "$$ \\frac{v_{recession}}{c} = \\beta$$<br>\n",
+        "Redshift is defined like this: $1+z=\\frac{\\lambda_{observed}}{\\lambda_{source}}=\\sqrt{\\frac{1+\\beta}{1-\\beta}}$<br><br>\n",
+        "Where we define $\\beta$ like this: $\\frac{v_{recession}}{c} = \\beta$<br>\n",
+        "Using a little algebra, we can convert $z$ into $v_{recession}$ if we wanted to do that. The original work from Hubble and his colleagues used plots of distance versus recession velocirt. For this activity, we will use flux versus z since z and recession velocity should vary in the same way.<br><br>\n",
         "<img src=\"https://openstax.org/apps/archive/20231109.173216/resources/7f27f064e23d86aa9968b4ef8642cbe37194697e\" width=75% />\n",
         "\n",
         "[Check out more about Hubble and his colleagues Humason and Lemaitre](https://openstax.org/books/astronomy-2e/pages/26-5-the-expanding-universe)"
