--- a/H_R_Diagram_Intro.ipynb
+++ b/H_R_Diagram_Intro.ipynb
@@ -21,9 +21,7 @@
       "version": "3.7.4"
     },
     "colab": {
-      "name": "H-R Diagram Intro.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
       "include_colab_link": true
     }
   },
@@ -66,7 +64,7 @@
         "id": "lwYsOqYNXwTX"
       },
       "source": [
-        "Double click here to answer: "
+        "Double click here to answer:"
       ]
     },
     {
@@ -76,11 +74,11 @@
       },
       "source": [
         "# Star catalogue analysis\n",
-        "This activity analyzes properties of over 100,000 stars. \n",
+        "This activity analyzes properties of over 100,000 stars.\n",
         "\n",
         "To get started,\n",
         "- You won't hurt anything by experimenting. If you break it, close the tab and open the activity again to start over.\n",
-        "- Is this your first time? Need a refresher? Try the 5-minute [Intro to Coding activity](https://colab.research.google.com/github/jimmynewland/colabnotebooks/blob/main/Colab_Coding_Intro.ipynb) and come back here. \n",
+        "- Is this your first time? Need a refresher? Try the 5-minute [Intro to Coding activity](https://colab.research.google.com/github/jimmynewland/colabnotebooks/blob/main/Colab_Coding_Intro.ipynb) and come back here.\n",
         "\n",
         "When you're ready, run each code cell until you get down to **Question 2**."
       ]
@@ -176,9 +174,9 @@
         "fig = plt.figure(figsize=(15, 4))\n",
         "plt.scatter(data['ra'],data['dec'], s=0.01)\n",
         "plt.xlim(24, 0)\n",
-        "plt.title(\"title?\")\n",
-        "plt.xlabel(\"Label me!\")\n",
-        "plt.ylabel(\"Me, too!\");"
+        "plt.title(\"What is this?\")\n",
+        "plt.xlabel(\"x axis?\")\n",
+        "plt.ylabel(\"y axis\");"
       ],
       "execution_count": null,
       "outputs": []
@@ -228,9 +226,9 @@
         "plt.scatter(np.log10(data.temp), data.absmag, s=size, edgecolors='none', alpha=transparency)\n",
         "plt.xlim(np.log10(15000),np.log10(2000))\n",
         "plt.ylim(20,-15)\n",
-        "plt.title(\"Any idea for a title?\")\n",
+        "plt.title(\"H-R Diagram (log)\")\n",
         "plt.ylabel(\"Absolute Magnitude\")\n",
-        "plt.xlabel(\"Log T (log K)\");"
+        "plt.xlabel(\"Log T (log K)\")"
       ],
       "execution_count": null,
       "outputs": []
@@ -322,30 +320,96 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CLxZJEktMweX"
+      },
+      "source": [],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ES8YKM3aMxgn"
+      },
+      "source": [
+        "plt.close('all')\n",
+        "fig = plt.figure(figsize=(12, 5))\n",
+        "plt.subplot(1, 2, 1)\n",
+        "\n",
+        "plt.scatter(data['temp'], data['absmag'], s=size, edgecolors='none', alpha=transparency)\n",
+        "plt.xlim(15000,2000)\n",
+        "plt.ylim(20,-15)\n",
+        "plt.title(\"Types of stars in a constellation\")\n",
+        "plt.ylabel(\"Absolute Magnitude\")\n",
+        "plt.xlabel(\"log Temp (K)\")\n",
+        "plt.title(\"HR Diagram (not log)\")\n",
+        "\n",
+        "plt.subplot(1, 2, 2)\n",
+        "transparency = 0.2\n",
+        "size = 1\n",
+        "\n",
+        "plt.scatter(np.log10(data['temp']), data['absmag'], s=size, edgecolors='none', alpha=transparency)\n",
+        "plt.xlim(np.log10(15000),np.log10(2000))\n",
+        "plt.ylim(20,-15)\n",
+        "plt.title(\"HR Diagram (log)\")\n",
+        "plt.ylabel(\"Absolute Magnitude\")\n",
+        "plt.xlabel(\"log Temp (logK)\")\n",
+        "plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "ivfXlh_k9KNq"
       },
       "source": [
-        "## Part Four\n",
+        "## Question Five\n",
         "The left plot above shows what the constellation **Orion** looks like in the sky. The plot on the right shows those same stars (as red points) on the same absolute magnitude vs. temperature plot in part two.\n",
         "- Using the graphic below, which types of stars are in Orion?\n",
         "- The code above shows the abbreviation for each constellation, then lets you filter the data set for just the stars in that constellation (called a *query*). Try plotting a different constellation, like Cassiopeia. Is it made of different types of stars?\n",
         "<img src=\"https://openstax.org/resources/dd3b626194347b820b300c0437928fdb31869efd\" width=\"640\" /><br />Figure 1 - H-R diagram for a selected sample of stars. (Fraknoi et al., 2017)\n",
-        "\n",
-        "---  \n",
-        "## Saving Your Work  \n",
-        "This is running on a Google server on a distant planet and deletes what you've done when you close this tab. To save your work for later use or analysis you have a few options:  \n",
-        "- File > \"Save a copy in Drive\" will save it to you Google Drive in a folder called \"Collaboratory\". You can run it later from there.  \n",
-        "- File > \"Download .ipynb\" to save to your computer (and run with Jupyter software later)  \n",
-        "- File > Print to ... um ... print.  \n",
-        "- To save an image of a plot or chart, right-click on it and select Save Image as ...  \n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "90gaVrIQ_8lw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "---\n",
+        "## Saving Your Work\n",
+        "This is running on a Google server on a distant planet and deletes what you've done when you close this tab. To save your work for later use or analysis you have a few options:\n",
+        "- File > \"Save a copy in Drive\" will save it to you Google Drive in a folder called \"Collaboratory\". You can run it later from there.\n",
+        "- File > \"Download .ipynb\" to save to your computer (and run with Jupyter software later)\n",
+        "- File > Print to ... um ... print.\n",
+        "- To save an image of a plot or chart, right-click on it and select Save Image as ...\n",
         "\n",
         "## Credits\n",
-        "The data came from [The Astronomy Nexus](http://www.astronexus.com/hyg) and their collection of the Hipparcos, Yale Bright Star, and Gliese catalogues ([huge zip file here](http://www.astronexus.com/files/downloads/hygdata_v3.csv.gz)). \n",
+        "The data came from [The Astronomy Nexus](http://www.astronexus.com/hyg) and their collection of the Hipparcos, Yale Bright Star, and Gliese catalogues ([huge zip file here](http://www.astronexus.com/files/downloads/hygdata_v3.csv.gz)).\n",
         "\n",
         "UCF physics undergraduate Tyler Townsend, who located the data and began the analysis, was funded by Seminole County Schools to make scientific computing a standard part of every middle school science class. The Mily Way scatterplot was added by [Quarknet](https://quarknet.i2u2.org/) Fellow and high school teacher Jeremy Smith, Baltimore, MD. This notebook was designed by [Adam LaMee](https://adamlamee.github.io/), who coordinated its development as the [PhysTEC](https://www.phystec.org/) Teacher-in-residence in the [University of Central Florida's Physics department](https://sciences.ucf.edu/physics/). Find more of Adam LaMee's activities at [CODINGinK12.org](http://www.codingink12.org)."
-      ]
+      ],
+      "metadata": {
+        "id": "MqRsjjID_1z3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "pc7-OvWU_07Z"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
