--- a/H_R_Diagram_Intro.ipynb
+++ b/H_R_Diagram_Intro.ipynb
@@ -322,15 +322,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CLxZJEktMweX"
-      },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "ES8YKM3aMxgn"
       },
       "source": [
@@ -371,7 +362,7 @@
         "The left plot above shows what the constellation **Orion** looks like in the sky. The plot on the right shows those same stars (as red points) on the same absolute magnitude vs. temperature plot in part two.\n",
         "- Using the graphic below, which types of stars are in Orion?\n",
         "- The code above shows the abbreviation for each constellation, then lets you filter the data set for just the stars in that constellation (called a *query*). Try plotting a different constellation, like Cassiopeia. Is it made of different types of stars?\n",
-        "<img src=\"https://openstax.org/resources/dd3b626194347b820b300c0437928fdb31869efd\" width=\"640\" /><br />Figure 1 - H-R diagram for a selected sample of stars. (Fraknoi et al., 2017)\n",
+        "<img src=\"https://openstax.org/apps/archive/20231218.154301/resources/dd3b626194347b820b300c0437928fdb31869efd\" width=\"640\" /><br />Figure 1 - H-R diagram for a selected sample of stars. (Fraknoi et al., 2017)\n",
         "\n"
       ]
     },
