--- a/H_R_Diagram_Intro.ipynb
+++ b/H_R_Diagram_Intro.ipynb
@@ -334,7 +334,7 @@
         "plt.ylim(20,-15)\n",
         "plt.title(\"Types of stars in a constellation\")\n",
         "plt.ylabel(\"Absolute Magnitude\")\n",
-        "plt.xlabel(\"log Temp (K)\")\n",
+        "plt.xlabel(\"Temp (K)\")\n",
         "plt.title(\"HR Diagram (not log)\")\n",
         "\n",
         "plt.subplot(1, 2, 2)\n",
@@ -392,15 +392,6 @@
       "metadata": {
         "id": "MqRsjjID_1z3"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "pc7-OvWU_07Z"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
