--- a/Ball_Toss_Data_Investigation_Solution.ipynb
+++ b/Ball_Toss_Data_Investigation_Solution.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNOaFcuJadIN3+F45VD85BW",
+      "authorship_tag": "ABX9TyMcAw0dB16niK0sJB4dp7u7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -576,33 +576,28 @@
       "metadata": {
         "id": "CTnjdPB347RE"
       },
-      "execution_count": 8,
+      "execution_count": 10,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "print(f'v_x = {v_x:.2f} (m/s) & a_y = {a_y:.2f} (m/s^2)')"
+        "print(f'v_x = {vx:.2f} (m/s) & a_y = {ay:.2f} (m/s^2)')"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 141
+          "base_uri": "https://localhost:8080/"
         },
         "id": "usy-BiZB5Ejg",
-        "outputId": "c462413a-1262-4dd9-f469-8022a8ff1544"
+        "outputId": "3eb0d900-1a79-4263-8703-0d93749f2961"
       },
-      "execution_count": 9,
+      "execution_count": 12,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'v_x' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-3304200881.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'v_x = {v_x:.2f} (m/s) & a_y = {a_y:.2f} (m/s^2)'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'v_x' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "v_x = 1.61 (m/s) & a_y = -9.36 (m/s^2)\n"
           ]
         }
       ]
