--- a/Ball_Toss_Data_Investigation_Solution.ipynb
+++ b/Ball_Toss_Data_Investigation_Solution.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP92iPoo9Hses+3RAWRGGei",
+      "authorship_tag": "ABX9TyMVNbuDT8YC6CYWbEqhpPjH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -675,6 +675,9 @@
     {
       "cell_type": "markdown",
       "source": [
+        "##License Information\n",
+        "Video data [courtesy of Open Source Physics](https://opensourcephysics.github.io/tracker-website/download/mechanics_videos.zip).\n",
+        "\n",
         "This activity was created by <a href=\"http://jimmynewland.com/\">Dr. J. Newland</a>. It was last updated on 2025-10-04.\n",
         "\n",
         "<a href=\"https://thinkingwithcode.com/datascience/balltoss.php\">Ball Toss Data Science Example</a> © 2025 by <a href=\"https://jimmynewland.com\">James Newland</a> is licensed under <a href=\"https://creativecommons.org/licenses/by-nc-nd/4.0/\">CC BY-NC-ND 4.0</a>\n",
