--- a/Keplers_3rd_Law_Activity.ipynb
+++ b/Keplers_3rd_Law_Activity.ipynb
@@ -23,7 +23,6 @@
     "colab": {
       "name": "Keplers 3rd Law Activity.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
       "include_colab_link": true
     }
   },
@@ -54,7 +53,7 @@
         "<img src=\"https://jimmynewland.com/astronomy/kepler-11-system.png\" width=650 />\n",
         "\n",
         "\n",
-        "The planetary data (period, T, in days and average distance from the star, a, in AU) is given in the table linked below. The period, T, is given in Earth days (not Earth years!) and the semi-major axis, a, is given in astronomical units. Using Kepler’s 3rd law of planetary motion, linearize the data with appropriate units to determine the mass of the central star of the given system as a ratio of solar mass. \n",
+        "The planetary data (period, T, in days and average distance from the star, a, in AU) is given in the table linked below. The period, T, is given in Earth days (not Earth years!) and the semi-major axis, a, is given in astronomical units. Using Kepler’s 3rd law of planetary motion, linearize the data with appropriate units to determine the mass of the central star of the given system as a ratio of solar mass.\n",
         "\n"
       ]
     },
@@ -74,7 +73,7 @@
         "id": "lwYsOqYNXwTX"
       },
       "source": [
-        "Double click here to answer: "
+        "Double click here to answer:"
       ]
     },
     {
@@ -96,7 +95,7 @@
         "import pandas as pd # pandas is common for data science\n",
         "import numpy as np #N umPy is used a lot in science\n",
         "import math # we need the math class for pi\n",
-        "%matplotlib inline \n",
+        "%matplotlib inline\n",
         "import matplotlib.pyplot as plt # MatPlotLib is the plotting standard\n",
         "import seaborn as sns # makes regression plot easy\n",
         "from scipy import stats # lets us do a linear regression"
@@ -125,11 +124,11 @@
         "id": "xUfovvQpLYJN"
       },
       "source": [
-        "# Type the constants here.\n",
+        "# Type the constants here in standard units.\n",
         "# Example: 3*10^8 in Python would be 3e8\n",
-        "d_au =\n",
-        "G = \n",
-        "m_sun = "
+        "d_au = 1  # put the correct value in meters here\n",
+        "G = 1     # put the correct value in Nm^2/kg^2\n",
+        "m_sun = 1 # put the correct value in kg"
       ],
       "execution_count": null,
       "outputs": []
@@ -151,7 +150,7 @@
       },
       "source": [
         "# Read in data that will be used for the calculations.\n",
-        "data1 = pd.read_csv(\"https://jimmynewland.com/astronomy/kepler-planetary-data.csv\")"
+        "df = pd.read_csv(\"https://thinkingwithcode.com/datascience/kepler-planetary-data.csv\")"
       ],
       "execution_count": null,
       "outputs": []
@@ -173,7 +172,7 @@
       },
       "source": [
         "# We wish to look at the first 5 rows of our data set\n",
-        "data1.head(5)"
+        "df.head(5)"
       ],
       "execution_count": null,
       "outputs": []
@@ -194,7 +193,7 @@
       },
       "source": [
         "# The .shape command displays the (number of rows , number of columns) in a file.\n",
-        "data1.shape"
+        "df.shape"
       ],
       "execution_count": null,
       "outputs": []
@@ -236,8 +235,8 @@
         "id": "1_gTK9FxK_WN"
       },
       "source": [
-        "r_au = np.array(data1['Semi Major Axis (AU)'])\n",
-        "t_days = np.array(data1['Orbital Period (days)'])"
+        "r_au = np.array(df['Semi Major Axis (AU)'])     # extract the distance data from df\n",
+        "t_days = np.array(df['Orbital Period (days)'])  # extract the time data from df"
       ],
       "execution_count": null,
       "outputs": []
@@ -287,10 +286,10 @@
       },
       "source": [
         "# Convert AU to m using one of the constants above\n",
-        "r_m = \n",
+        "r_m = r_au * 1   # use the correct constant instead of 1\n",
         "\n",
-        "# How many seconds are in a day?\n",
-        "t_s = "
+        "# How many seconds are in a day? Use that to change t_days\n",
+        "t_s = t_days * 1 # use the correct constant instead of 1"
       ],
       "execution_count": null,
       "outputs": []
@@ -312,7 +311,7 @@
         "id": "y3FV1CsFbUmB"
       },
       "source": [
-        "Store the linearized distances in the list called <code>x</code> and the linearized times in the list called <code>y</code>. \n",
+        "Store the linearized distances in the list called <code>x</code> and the linearized times in the list called <code>y</code>.\n",
         "\n",
         "**This part is important! The data won't be linear if you don't apply the correct mathematical process to your various lists of data.**"
       ]
@@ -325,8 +324,8 @@
       "source": [
         "# Hint: In Python, exponents work like this\n",
         "# a^2 (a squared) would be a**2\n",
-        "x = \n",
-        "y = "
+        "x = r_m # Change for x-axis based on equation above? (Hint: use distance somehow)\n",
+        "y = t_s # Change for y-axis based on equation above? (Hint: use time somehow)"
       ],
       "execution_count": null,
       "outputs": []
@@ -376,7 +375,7 @@
       },
       "source": [
         "# Make a New DataFrame\n",
-        "By putting the linearized data in a new DataFrame, we can easily plot a linear regression using Seaborn. This is a common data science technique. "
+        "By putting the linearized data in a new DataFrame, we can easily plot a linear regression using Seaborn. This is a common data science technique."
       ]
     },
     {
@@ -386,11 +385,12 @@
       },
       "source": [
         "# Make a new DataFrame and take a look at it.\n",
-        "data2 = pd.DataFrame({'r^3':x, 't^2':y})\n",
+        "df2 = pd.DataFrame({'r^3 (m^3)':x, 't^2 (s^2)':y})\n",
         "\n",
-        "# Most of time, in python, a variable by itself\n",
-        "# like this just prints the contents of the variable.\n",
-        "data2"
+        "# Append the new data to the original dataframe\n",
+        "df = pd.concat([df, df2], axis=1)\n",
+        "\n",
+        "df.head()"
       ],
       "execution_count": null,
       "outputs": []
@@ -415,13 +415,13 @@
       "source": [
         "# Use the algebraically rearranged slope expression\n",
         "# to find the mass of the star in this system.\n",
-        "m_star = \n",
+        "m_star = (1 * 1)/(1 * 1) # replace right hand side using correct algebra & constants\n",
         "\n",
         "# Find the ratio of this star's mass to that of the sun, given above.\n",
-        "ratio = \n",
+        "ratio = m_star / 1 # replace 1 with correct constant\n",
         "\n",
         "# Display the ratio.\n",
-        "ratio"
+        "print(ratio)"
       ],
       "execution_count": null,
       "outputs": []
@@ -442,11 +442,19 @@
         "id": "TS8L4GbdwvdV"
       },
       "source": [
-        "plt.scatter(x,y)\n",
-        "sns.regplot(x=\"r^3\", y=\"t^2\", data=data2)"
+        "sns.regplot(x=\"r^3 (m^3)\", y=\"t^2 (s^2)\", data=df2)"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<a href=\"https://github.com/jimmynewland/colabnotebooks/blob/main/Keplers_3rd_Law_Activity.ipynb\">Kepler's Third Law Activity</a> © 2025 by <a href=\"https://jimmynew.land/\">Dr. James Newland</a> is licensed under <a href=\"https://creativecommons.org/licenses/by-nc-sa/4.0/\">CC BY-NC-SA 4.0</a><img src=\"https://mirrors.creativecommons.org/presskit/icons/cc.svg\" alt=\"\" style=\"max-width: 1em;max-height:1em;margin-left: .2em;\"><img src=\"https://mirrors.creativecommons.org/presskit/icons/by.svg\" alt=\"\" style=\"max-width: 1em;max-height:1em;margin-left: .2em;\"><img src=\"https://mirrors.creativecommons.org/presskit/icons/nc.svg\" alt=\"\" style=\"max-width: 1em;max-height:1em;margin-left: .2em;\"><img src=\"https://mirrors.creativecommons.org/presskit/icons/sa.svg\" alt=\"\" style=\"max-width: 1em;max-height:1em;margin-left: .2em;\">"
+      ],
+      "metadata": {
+        "id": "RhKiaMp0ZLvw"
+      }
     }
   ]
 }
