--- a/Keplers_3rd_Law_Activity.ipynb
+++ b/Keplers_3rd_Law_Activity.ipynb
@@ -43,7 +43,7 @@
         "id": "3JDakeShaAQH"
       },
       "source": [
-        "# Kepler's 3rd Law Activity\n",
+        "# Kepler's 3rd Law Activity Using Data\n",
         "This coding activity let's us explore some data gathered by the [Kepler spacecraft](https://archive.stsci.edu/missions-and-data/kepler) of a single set of planets orbiting a star a lot like the sun.\n",
         "\n",
         "<img src=\"https://jimmynewland.com/astronomy/kepler-11b.png\" width=650 />\n",
